get announcement problem bot